# hash-vote

./: .bandit  .flake8  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  console_main.py  pyproject.toml  readme.md  requirements.txt  update_version_badge.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
app/: README.md  cli.py  database.py  main.py  models.py  pow.py  sql_functions.py
docs/: api-usage.md  development.md  security.md  technical-specs.md  testing.md
hashvote/: database.py  models.py
sql/: init.sql
sql/queries/: audit_queries.sql  maintenance.sql  vote_statistics.sql
tasks/: todo.md
tests/: README.md  test_api.py  test_cli.py  test_pow.py  test_sql_functions.py
